[package]
name = "uncflow-agent"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "uncflow"
path = "main.rs"

[lib]
name = "uncflow"
path = "lib.rs"

[dependencies]
# Hardware Access
nix = { version = "0.27", features = ["sched", "fs", "mman"] }

# Metrics & Monitoring
prometheus = { version = "0.13", features = ["process"] }

# CLI & Configuration
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }

# Async & Networking
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"

# Logging & Error Handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"

# Utilities
once_cell = "1.19"
parking_lot = "0.12"
libc = "0.2"
