[package]
name = "uncflow-agent"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "uncflow"
path = "main.rs"

[lib]
name = "uncflow"
path = "lib.rs"

[dependencies]
uncflow-raw = { path = "../uncflow-raw", features = ["skylake"] }
nix = { version = "0.30.1", features = ["sched", "fs", "mman"] }
prometheus = { version = "0.14.0", features = ["process"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
axum = "0.8.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0.17"
anyhow = "1.0"
once_cell = "1.19"
parking_lot = "0.12"
libc = "0.2"
